--- a/ue-id/Dockerfile
+++ b/ue-id/Dockerfile
@@ -2,6 +2,9 @@
 
 FROM golang:1.23
 
+ARG GIT_BRANCH=unknown
+ARG GIT_COMMIT=unknown
+
 WORKDIR /
 
 COPY  . app
@@ -10,7 +13,7 @@ WORKDIR /app
 
 RUN go mod tidy
 
-RUN CGO_ENABLED=0 GOOS=linux go build -ldflags "-X main.gitBranch=$(git rev-parse --abbrev-ref HEAD) -X main.gitCommit=$(git rev-parse HEAD)" -o /ue-id  cmd/ue-id/main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -ldflags "-X main.gitBranch=${GIT_BRANCH} -X main.gitCommit=${GIT_COMMIT}" -o /ue-id  cmd/ue-id/main.go
 
 RUN rm -rf /app
 WORKDIR /
