--- a/as-session-with-qos/Dockerfile
+++ b/as-session-with-qos/Dockerfile
@@ -1,5 +1,8 @@
 FROM golang:1.22
 
+ARG GIT_BRANCH=unknown
+ARG GIT_COMMIT=unknown
+
 WORKDIR /
 
 COPY  . app
@@ -8,7 +11,7 @@ WORKDIR /app
 
 RUN go mod tidy
 
-RUN CGO_ENABLED=0 GOOS=linux go build -ldflags "-X main.gitBranch=$(git rev-parse --abbrev-ref HEAD) -X main.gitCommit=$(git rev-parse HEAD)" -o /as-sess-qos  cmd/as-session-with-qos/main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -ldflags "-X main.gitBranch=${GIT_BRANCH} -X main.gitCommit=${GIT_COMMIT}" -o /as-sess-qos  cmd/as-session-with-qos/main.go
 
 RUN rm -rf /app
 WORKDIR /
