--- a/traffic-influence/Dockerfile
+++ b/traffic-influence/Dockerfile
@@ -1,5 +1,8 @@
 FROM golang:1.22
 
+ARG GIT_BRANCH=unknown
+ARG GIT_COMMIT=unknown
+
 WORKDIR /
 
 COPY  . app
@@ -9,7 +12,7 @@ WORKDIR /app
 RUN go mod tidy
 RUN go mod download
 
-RUN CGO_ENABLED=0 GOOS=linux go build -ldflags "-X main.gitBranch=$(git rev-parse --abbrev-ref HEAD) -X main.gitCommit=$(git rev-parse HEAD)" -o /traffic-influence  cmd/traffic-influence/main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -ldflags "-X main.gitBranch=${GIT_BRANCH} -X main.gitCommit=${GIT_COMMIT}" -o /traffic-influence  cmd/traffic-influence/main.go
 
 RUN rm -rf /app
 WORKDIR /
