--- a/ue-profile-service/Dockerfile
+++ b/ue-profile-service/Dockerfile
@@ -1,6 +1,9 @@
 
 FROM golang:1.22
 
+ARG GIT_BRANCH=unknown
+ARG GIT_COMMIT=unknown
+
 WORKDIR /
 
 COPY  . app
@@ -8,7 +11,7 @@ COPY  . app
 WORKDIR /app
 
 RUN go mod download
-RUN CGO_ENABLED=0 GOOS=linux go build -ldflags "-X main.gitBranch=$(git rev-parse --abbrev-ref HEAD) -X main.gitCommit=$(git rev-parse HEAD)" -o /ue-profile-service  cmd/ue-profile-service/main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -ldflags "-X main.gitBranch=${GIT_BRANCH} -X main.gitCommit=${GIT_COMMIT}" -o /ue-profile-service  cmd/ue-profile-service/main.go
 RUN rm -rf /app
 
 WORKDIR /
